# tell

./: .buildinfo  .gitignore  .pre-commit-config.yaml  1.2_matlab_to_python.py  1.4_matlab_to_python.py  1.5.1_matlab_to_python.py  714_BA_subset.py  BA_yearly_subset.py  CONTRIBUTING.md  DISCLAIMER  Dockerfile  EIA_930_BA_Information_From_BA_Number.py  FERC_714_subset.py  FIPS_data.py  LICENSE  MANIFEST.in  Process_Composite_BA_Data.m  Process_Population_Time_Series_Within_BA_Domain.m  Process_Raw_EIA_930_BA_Hourly_Lod_Data_into_Matlab_Files.m  README.html  README.md  __init__.py  acknowledgement.html  casey.html  contributing.html  example.py  genindex.html  index.html  license.html  logger.py  match.py  match_FIPS_code.py  modules.html  objects.inv  predictor.py  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  (+6 more)
_modules/: index.html
_sources/: acknowledgement.rst.txt  contributing.rst.txt  modules.rst.txt  tell.rst.txt  tell_quickstarter.rst.txt  user_guide.rst.txt
inputs/: state_and_county_fips_codes.csv  state_and_county_fips_codes.xlsx
notebooks/: add_pops.ipynb  met_variable_testing.ipynb  run_predictor.ipynb  tell_data_preprocessing.ipynb  tell_mlp_calibration_evaluation.ipynb  tell_quickstarter.ipynb  tell_quickstarter_update.ipynb  tell_runs_exp_group_b.ipynb  tell_runs_godeeep.ipynb  testing_ba_mapping.ipynb
paper/: paper.bib  paper.md
production_visualizations/: README.md  README_LDCs.md
python_scripts/: predictor.py  requirements.txt
scripts/: 1.2_matlab_to_python.py  1.4_matlab_to_python.py  BA_yearly_subset.py  EIA_930_BA_Information_From_BA_Number.py  EIA_930_data_processing.py  casey.html  county_pop_mapping_interpolation.py  data_process_compile_df.py  data_processing_examples.py  execute_tell_forward_examples.py  install_supplement.py  match_FIPS_code.py  mlp_construct_data.py  mlp_train.py  package_data.py  predictor_examples.py  visualization.py  workflow_examples.py
tell/: 1.2_matlab_to_python.py  EIA_930_data_processing.py  __init__.py  construct_data.py  data_process_compile.py  data_process_compile_df.py  data_process_eia_930.py  data_process_pop_interp.py  data_process_population.py  data_process_wrf.py  data_spatial_mapping.py  execute_forward.py  execute_foward.py  execute_tell_foward.py  install_forcing_data.py  install_output_data.py  install_quickstarter_data.py  install_raw_data.py  install_supplement.py  install_weather_data.py  install_weather_forcing_sample.py  logger.py  match.py  metadata_eia.py  mlp.py  mlp_plotting.py  mlp_predict.py  mlp_predictor.py  mlp_prepare_data.py  train.py  (+10 more)
(+391 files in other folders)
